# doors-stores

./: CHANGES.md  README.md  pyproject.toml
doors_stores/: constants.py  kassandrastore.py  msistore.py  olcistore.py  plugin.py  pmlstore.py  version.py
doors_stores/data/: certo-v2-danube-msi-refls-v2-desc.json  certo-v2-danube-msi-v2-desc.json  olci_refs.json
test/: test_msi_store.py  test_olci_store.py  test_store.py
